@@ -15,7 +15,7 @@ AC_PREREQ(2.50)
 #
 CPPUNIT_MAJOR_VERSION=1
 CPPUNIT_MINOR_VERSION=7
-CPPUNIT_MICRO_VERSION=2
+CPPUNIT_MICRO_VERSION=3
 CPPUNIT_INTERFACE_AGE=0
 CPPUNIT_BINARY_AGE=1
 CPPUNIT_VERSION=$CPPUNIT_MAJOR_VERSION.$CPPUNIT_MINOR_VERSION.$CPPUNIT_MICRO_VERSION
